2008-01-26  Michael Albinus  <michael.albinus@gmx.de>

	* vc.el (vc-directory, vc-update-change-log): Remove check for
	Tramp.  Both functions work for it, though pretty slow
	(`vc-directory').  Maybe the implementation can be optimized.

	* net/tramp.el (tramp-dissect-file-name): Raise an error when
	Tramp 2.0 syntax is used.  Suggested by Trent W. Buck
	<trentbuck@gmail.com>.

2008-01-26  Eli Zaretskii  <eliz@gnu.org>

	* ls-lisp.el (ls-lisp-insert-directory): If -n switch is used,
	invoke directory-files-and-attributes with last argument `integer'
	instead of `string'.
	(insert-directory): Add -n to the list of supported switches
	mentioned in the doc string.

2008-01-26  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: New version 9.1.  Handle "long" line tail
	visualization.  Doc fix.
	(blank-line-length): Renamed to blank-line-column.
	(blank-chars-value-list, blank-toggle-option-alist, blank-help-text):
	Initialization fix.
	(blank-replace-spaces-by-tabs): New fun.
	(blank-cleanup, blank-cleanup-region, blank-color-on): Code fix.

2008-01-25  Richard Stallman  <rms@gnu.org>

	* subr.el (add-hook): Implement `permanent-local-hook' property.

	* loadhist.el (file-provides, file-requires): Push the filename right.

2008-01-25  Martin Rudalics  <rudalics@gmx.at>

	* emacs-lisp/find-func.el (find-library): Wrap search for
	library name in condition-case to avoid reporting a scan-error.

2008-01-25  Juanma Barranquero  <lekktu@gmail.com>

	* server.el (server-process-filter): Don't force
	the authentication string to be followed by "\n".

2008-01-25  Vinicius Jose Latorre  <viniciusjl@ig.com.br>

	* blank-mode.el: New version 9.0.  New commands to clean up some blank
	problems like trailing blanks.  New faces and regexp for visualizing
	the blank problems.  Doc fix.
	(blank-chars, blank-global-modes, blank-chars-value-list)
	(blank-toggle-option-alist, blank-help-text): Initialization fix.